--- a/src/sass/module/_contact-thanks.scss
+++ b/src/sass/module/_contact-thanks.scss
@@ -1,5 +1,12 @@
 @use "global" as *;
 
+.contact-thanks {
+  padding-bottom: rem(144);
+  @include mq("md") {
+    padding-bottom: rem(120);
+  }
+}
+
 .contact-thanks__title {
   text-align: center;
   font-size: rem(16);
