--- a/src/sass/module/_campaign-card.scss
+++ b/src/sass/module/_campaign-card.scss
@@ -66,7 +66,6 @@
 
 .campaign-card__title {
   margin-top: rem(4);
-  margin-bottom: auto;
   padding-bottom: rem(7.5);
   width: 100%;
   font-size: rem(16);
@@ -181,10 +180,17 @@
 }
 
 .campaign-card__wrap {
-  margin-top: rem(24);
+  display: none;
+  @include mq("md") {
+    margin-top: rem(24);
+    display: flex;
+    flex-direction: column;
+    flex-grow: 1;
+  }
 }
 
 .campaign-card__description {
+  margin-bottom: auto;
   font-size: rem(16);
   line-height: calc(24 / 16);
 }
