--- a/src/sass/module/_sub-price.scss
+++ b/src/sass/module/_sub-price.scss
@@ -71,7 +71,7 @@
 }
 
 .sub-price__term {
-  padding-block: rem(5.5);
+  padding: rem(5.5) 1em;
   display: flex;
   flex-direction: column;
   align-items: center;
