.画像差し替え

--- a/src/sass/module/_campaign-card.scss
+++ b/src/sass/module/_campaign-card.scss
@@ -66,6 +66,7 @@
 
 .campaign-card__title {
   margin-top: rem(4);
+  margin-bottom: auto;
   padding-bottom: rem(7.5);
   width: 100%;
   font-size: rem(16);
