--- a/src/sass/module/_about.scss
+++ b/src/sass/module/_about.scss
@@ -101,6 +101,7 @@
     color: $white;
     font-size: rem(80);
     line-height: calc(100 / 80);
+    text-shadow: 1px 1px 3px #444;
   }
 }
 
@@ -119,6 +120,7 @@
   @include mq("md") {
     margin-top: 0;
     color: $white;
+    text-shadow: 1px 1px 3px #444;
   }
 }
 
