--- a/src/sass/module/_sub-about.scss
+++ b/src/sass/module/_sub-about.scss
@@ -18,7 +18,7 @@
   left: 0;
   width: 100%;
   aspect-ratio: 345 / 228;
-  background-image: url(../images/about/img-about01-sp.webp);
+  background-image: url(../images/about/img-about01.webp);
   background-size: cover;
   z-index: -2;
   @include mq("md") {
@@ -28,7 +28,6 @@
     bottom: 0;
     width: rem(880);
     aspect-ratio: 880 / 581;
-    background-image: url(../images/about/img-about01-pc.webp);
   }
 }
 
@@ -54,6 +53,7 @@
   font-weight: $regular;
   font-size: rem(40);
   line-height: 1;
+  text-shadow: 1px 1px 3px #444;
   @include mq("md") {
     padding-left: 0;
     flex: 0 0 auto;
@@ -66,6 +66,7 @@
   margin-top: calc(164 / 345 * 100%);
   font-size: rem(16);
   line-height: calc(24 / 16);
+  text-shadow: 1px 1px 3px #444;
   @include mq("md") {
     margin-top: rem(26);
     margin-left: rem(41);
