--- a/src/sass/module/_sub-mv.scss
+++ b/src/sass/module/_sub-mv.scss
@@ -32,37 +32,37 @@
 }
 
 .sub-mv--campaign {
-  background-image: url(../images/sub-mv/img-campaign.webp);
+  background-image: url(../images/sub-mv/campaign.webp);
 }
 
 .sub-mv--about {
-  background-image: url(../images/sub-mv/img-about.webp);
+  background-image: url(../images/sub-mv/about.webp);
 }
 
 .sub-mv--info {
-  background-image: url(../images/sub-mv/img-information.webp);
+  background-image: url(../images/sub-mv/information.webp);
 }
 
 .sub-mv--blog {
-  background-image: url(../images/sub-mv/img-blog.webp);
+  background-image: url(../images/sub-mv/blog.webp);
 }
 
 .sub-mv--voice {
-  background-image: url(../images/sub-mv/img-voice.webp);
+  background-image: url(../images/sub-mv/voice.webp);
 }
 
 .sub-mv--price {
-  background-image: url(../images/sub-mv/img-price.webp);
+  background-image: url(../images/sub-mv/price.webp);
 }
 
 .sub-mv--faq {
-  background-image: url(../images/sub-mv/img-faq.webp);
+  background-image: url(../images/sub-mv/faq.webp);
 }
 
 .sub-mv--contact {
-  background-image: url(../images/sub-mv/img-contact.webp);
+  background-image: url(../images/sub-mv/contact.webp);
 }
 
 .sub-mv--common {
-  background-image: url(../images/sub-mv/img-common.webp);
+  background-image: url(../images/sub-mv/common.webp);
 }
