--- a/src/sass/module/_contact.scss
+++ b/src/sass/module/_contact.scss
@@ -11,13 +11,15 @@
     content: "";
     display: block;
     position: absolute;
-    top: rem(-40);
-    right: calc(50% - min((50vw - 25px), rem(670)));
-    width: rem(301);
-    height: rem(138);
-    background-image: url(../images/top/img-contact-deco.svg);
-    background-size: contain;
-    background-repeat: no-repeat;
+    top: rem(-80);
+    right: calc(50% - min((50vw - 25px), rem(580)));
+    width: rem(170);
+    height: rem(170);
+    mask-image: url(../images/common/contact-deco.svg);
+    mask-size: contain;
+    mask-repeat: no-repeat;
+    mask-position: center;
+    background-color: $c-main;
   }
 }
 
