画像差し替え

--- a/src/sass/module/_contact.scss
+++ b/src/sass/module/_contact.scss
@@ -15,7 +15,7 @@
     right: calc(50% - min((50vw - 25px), rem(580)));
     width: rem(170);
     height: rem(170);
-    mask-image: url(../images/common/contact-deco.svg);
+    mask-image: url(../images/common/deco03.svg);
     mask-size: contain;
     mask-repeat: no-repeat;
     mask-position: center;
