--- a/src/sass/module/_ornament.scss
+++ b/src/sass/module/_ornament.scss
@@ -12,7 +12,7 @@
   left: calc(50% - (50vw - 15px));
   width: rem(100);
   height: rem(45);
-  mask-image: url(../images/common/ornament.svg);
+  mask-image: url(../images/common/deco01.svg);
   mask-size: contain;
   mask-repeat: no-repeat;
   mask-position: center;
