--- a/src/sass/module/_gallery.scss
+++ b/src/sass/module/_gallery.scss
@@ -11,12 +11,13 @@
     position: absolute;
     top: rem(-80);
     right: calc(50% - min((50vw - 25px), rem(640)));
-    width: rem(301);
-    height: rem(138);
-    background-image: url(../images/about/img-gallery-deco.svg);
-    background-size: contain;
-    background-repeat: no-repeat;
-    background-position: center;
+    width: rem(200);
+    height: rem(200);
+    mask-image: url(../images/common/deco02.svg);
+    mask-size: contain;
+    mask-repeat: no-repeat;
+    mask-position: center;
+    background-color: $color-main;
   }
 }
 
