--- a/src/sass/module/_info.scss
+++ b/src/sass/module/_info.scss
@@ -64,16 +64,16 @@
 
 .info__tab-item:nth-of-type(1)::before {
   @include mq("md") {
-    mask-image: url(../images/info/icon-info01.svg);
+    mask-image: url(../images/common/deco05.svg);
   }
 }
 
 .info__tab-item:nth-of-type(2)::before {
-  mask-image: url(../images/info/icon-info02.svg);
+  mask-image: url(../images/common/deco04.svg);
 }
 
 .info__tab-item:nth-of-type(3)::before {
-  mask-image: url(../images/info/icon-info03.svg);
+  mask-image: url(../images/common/deco06.svg);
 }
 
 .info__tab-item span {
