--- a/src/sass/module/_sidebar-title.scss
+++ b/src/sass/module/_sidebar-title.scss
@@ -17,7 +17,8 @@
   display: inline-block;
   width: rem(50);
   height: rem(50);
-  background-image: url(../images/common/icon-sidebar.svg);
+  background-image: url(../images/common/deco04.svg);
   background-size: contain;
   background-repeat: no-repeat;
+  background-position: center;
 }
