--- a/src/sass/module/_sub-mv.scss
+++ b/src/sass/module/_sub-mv.scss
@@ -18,8 +18,8 @@
   width: 100%;
   text-align: center;
   color: $white;
-  font-weight: $regular;
-  font-family: $third-font-family;
+  font-weight: $bold;
+  font-family: $second-font-family;
   font-size: rem(40);
   line-height: calc(48 / 40);
   text-shadow: 1px 1px 3px #444;
