--- a/src/sass/module/_sub-price.scss
+++ b/src/sass/module/_sub-price.scss
@@ -37,6 +37,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  gap: rem(8);
   position: relative;
   @include mq("md") {
     flex-direction: column-reverse;
@@ -48,10 +49,11 @@
   display: inline-block;
   width: rem(24);
   height: rem(24);
-  background-image: url(../images/common/icon-price-title.svg);
-  background-size: contain;
-  background-repeat: no-repeat;
-  background-position: center;
+  mask-image: url(../images/common/deco07.svg);
+  mask-size: contain;
+  mask-repeat: no-repeat;
+  mask-position: center;
+  background-color: $white;
   @include mq("md") {
     margin-top: rem(8);
     width: rem(64);
