--- a/src/sass/module/_contact.scss
+++ b/src/sass/module/_contact.scss
@@ -155,7 +155,7 @@
 
 .contact__text {
   margin-top: rem(8);
-  color: $c-main;
+  color: $color-main;
   text-align: center;
   font-size: rem(14);
   font-weight: $regular;
