--- a/src/sass/module/_mv.scss
+++ b/src/sass/module/_mv.scss
@@ -11,6 +11,9 @@
 }
 
 .mv__title-wrap {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   position: absolute;
   top: 50%;
   left: 50%;
@@ -22,23 +25,28 @@
 }
 
 .mv__main-title {
+  display: flex;
+  flex-direction: column;
   font-family: $third-font-family;
-  font-size: rem(40);
-  font-weight: $regular;
+  font-size: vw(375, 40);
+  font-weight: $bold;
   line-height: calc(48 / 40);
-  letter-spacing: calc(21.6 / 40 * 1em);
-  text-indent: calc(21.6 / 40 * 1em);
+  letter-spacing: 0.1em;
+  text-align: left;
   @include mq("md") {
+    flex-direction: row;
+    justify-content: center;
+    width: 100%;
     font-size: vw(1440, 80);
     line-height: calc(100 / 80);
-    letter-spacing: calc(43.2 / 80 * 1em);
-    text-indent: calc((43.2 / 80 * 1em));
+    letter-spacing: 0.1em;
   }
 }
 
 .mv__sub-title {
   font-family: $second-font-family;
   font-size: rem(20);
+  font-size: vw(375, 20);
   font-weight: $regular;
   line-height: calc(33 / 20);
   @include mq("md") {
