--- a/src/sass/module/_price.scss
+++ b/src/sass/module/_price.scss
@@ -14,11 +14,11 @@
     content: "";
     display: block;
     position: absolute;
-    bottom: rem(60);
+    bottom: rem(0);
     left: calc(50% - min((50vw - 25px), rem(620)));
-    width: rem(437);
-    height: rem(201);
-    background-image: url(../images/top/img-price-deco.svg);
+    width: rem(250);
+    height: rem(250);
+    background-image: url(../images/common/deco02.svg);
     background-size: contain;
     background-repeat: no-repeat;
   }
