--- a/src/sass/module/_blog-card.scss
+++ b/src/sass/module/_blog-card.scss
@@ -41,7 +41,7 @@
   font-size: rem(16);
   font-weight: $medium;
   line-height: calc(24 / 16);
-  border-bottom: 1px solid $c-main;
+  border-bottom: 1px solid $color-main;
 }
 
 .blog-card__text {
