--- a/src/sass/module/_image-mask.scss
+++ b/src/sass/module/_image-mask.scss
@@ -6,7 +6,7 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: $c-main;
+  background-color: $color-main;
   transform: scaleX(0);
 }
 .image-mask.is-visible {
