--- a/src/sass/module/_section-title.scss
+++ b/src/sass/module/_section-title.scss
@@ -5,7 +5,7 @@
 }
 
 .section-title__main {
-  color: $c-main;
+  color: $color-main;
   font-family: $second-font-family;
   font-size: rem(32);
   font-weight: $regular;
@@ -21,7 +21,7 @@
 
 .section-title__sub {
   margin-top: rem(4);
-  color: $c-main;
+  color: $color-main;
   font-size: rem(12);
   font-weight: $regular;
   line-height: calc(18 / 12);
