--- a/src/sass/module/_sidebar-title.scss
+++ b/src/sass/module/_sidebar-title.scss
@@ -8,7 +8,7 @@
   font-size: rem(24);
   font-weight: $regular;
   line-height: calc(35 / 24);
-  border-left: 8px solid $c-main;
+  border-left: 8px solid $color-main;
 }
 
 .sidebar-title::before {
