--- a/src/sass/module/_breadcrumb.scss
+++ b/src/sass/module/_breadcrumb.scss
@@ -21,7 +21,7 @@
   mask-size: contain;
   mask-repeat: no-repeat;
   mask-position: center;
-  background-color: $c-font;
+  background-color: $color-font;
 }
 
 .breadcrumb--white {
