--- a/src/sass/module/_button.scss
+++ b/src/sass/module/_button.scss
@@ -14,12 +14,12 @@
 }
 
 .button--white {
-  color: $c-main;
+  color: $color-main;
 }
 
 .button:hover {
   @include mq("md") {
-    color: $c-main;
+    color: $color-main;
   }
 }
 
@@ -42,12 +42,12 @@
 }
 
 .button--white::after {
-  background-color: $c-main;
+  background-color: $color-main;
 }
 
 .button:hover::after {
   @include mq("md") {
-    background-color: $c-main;
+    background-color: $color-main;
   }
 }
 
@@ -64,8 +64,8 @@
   left: 0;
   width: calc(100% - rem(4));
   height: calc(100% - rem(4));
-  background-color: $c-main;
-  border: 1px solid $c-main;
+  background-color: $color-main;
+  border: 1px solid $color-main;
   z-index: -1;
 }
 
@@ -82,7 +82,7 @@
   left: rem(4);
   width: 100%;
   height: 100%;
-  border: 1px solid $c-main;
+  border: 1px solid $color-main;
 }
 
 .button--white span::before {
@@ -104,7 +104,7 @@
 }
 
 .button--white span::after {
-  background-color: $c-main;
+  background-color: $color-main;
 }
 
 .button:hover span::after {
