--- a/src/sass/module/_form.scss
+++ b/src/sass/module/_form.scss
@@ -2,7 +2,7 @@
 
 .form__item {
   padding-block: rem(23.5);
-  border-bottom: 1px dashed $c-main;
+  border-bottom: 1px dashed $color-main;
   @include mq("md") {
     padding-block: rem(39.5);
     display: flex;
@@ -57,12 +57,12 @@
   font-size: rem(16);
   font-weight: $regular;
   line-height: 1;
-  border: 1px solid $c-main;
+  border: 1px solid $color-main;
   background-color: $white;
 }
 
 .form__input input::placeholder {
-  color: $c-sub;
+  color: $color-sub;
 }
 
 // CHECKBOX
@@ -98,7 +98,7 @@
   width: rem(14);
   height: rem(14);
   background-color: $white;
-  border: 1px solid $c-main;
+  border: 1px solid $color-main;
 }
 
 .form__check input + span::after {
@@ -127,7 +127,7 @@
   width: 100%;
   font-size: rem(12);
   line-height: 1;
-  border: 1px solid $c-main;
+  border: 1px solid $color-main;
   background-image: url(../images/common/icon-form-select.svg);
   background-repeat: no-repeat;
   background-size: rem(10);
@@ -142,7 +142,7 @@
   font-size: rem(16);
   font-weight: $regular;
   line-height: calc(23 / 16);
-  border: 1px solid $c-main;
+  border: 1px solid $color-main;
   background-color: $white;
 }
 
@@ -180,7 +180,7 @@
   width: rem(22);
   height: rem(22);
   background-color: $white;
-  border: 1px solid $c-main;
+  border: 1px solid $color-main;
 }
 
 .form__privacy input + span::after {
@@ -236,7 +236,7 @@
 
 .form__submit input:hover ~ .form__submit-button {
   @include mq("md") {
-    color: $c-main;
+    color: $color-main;
   }
 }
 
@@ -254,7 +254,7 @@
 
 .form__submit input:hover ~ .form__submit-button::after {
   @include mq("md") {
-    background-color: $c-main;
+    background-color: $color-main;
   }
 }
 
@@ -265,8 +265,8 @@
   left: 0;
   width: calc(100% - rem(4));
   height: calc(100% - rem(4));
-  background-color: $c-main;
-  border: 1px solid $c-main;
+  background-color: $color-main;
+  border: 1px solid $color-main;
   z-index: -1;
 }
 
@@ -278,7 +278,7 @@
   left: rem(4);
   width: 100%;
   height: 100%;
-  border: 1px solid $c-main;
+  border: 1px solid $color-main;
 }
 
 .form__submit-button span::after {
