--- a/src/sass/module/_header.scss
+++ b/src/sass/module/_header.scss
@@ -3,7 +3,7 @@
 .header {
   width: 100%;
   height: rem(80);
-  background: rgba(13, 41, 54, 0.68);
+  background: rgba(0, 0, 0, 0.6);
   @include mq("md") {
     height: rem(90);
   }
@@ -21,11 +21,11 @@
 
 .header__logo {
   position: relative;
-  width: rem(80);
+  width: rem(102);
   height: inherit;
   z-index: 20;
   @include mq("md") {
-    width: rem(90);
+    width: rem(133);
   }
 }
 .header__logo a {
@@ -101,7 +101,7 @@
   right: -120%;
   width: 100%;
   height: 100vh;
-  background-color: $c-main;
+  background-color: $color-main;
   overflow-y: scroll;
   overscroll-behavior: contain;
   transition: 0.6s;
@@ -122,6 +122,6 @@
   left: 0;
   width: 100%;
   height: rem(80);
-  background-color: $c-main;
+  background-color: $color-main;
   z-index: 20;
 }
