--- a/src/sass/module/_information.scss
+++ b/src/sass/module/_information.scss
@@ -2,7 +2,7 @@
 
 .information {
   padding-block: rem(80);
-  background-color: $c-sub;
+  background-color: $color-sub;
   @include mq("md") {
     padding-top: rem(100);
     padding-bottom: rem(76);
@@ -44,7 +44,7 @@
 .information__lead {
   position: relative;
   padding-bottom: rem(4);
-  color: $c-font;
+  color: $color-font;
   font-size: rem(20);
   font-weight: $bold;
   line-height: calc(24 / 20);
@@ -63,12 +63,12 @@
   height: rem(2);
   bottom: rem(-1);
   left: 0;
-  background-color: $c-main;
+  background-color: $color-main;
 }
 
 .information__text {
   margin-top: rem(8);
-  color: $c-font;
+  color: $color-font;
   font-size: rem(16);
   font-weight: $regular;
   line-height: calc(24 / 16);
@@ -85,6 +85,6 @@ img.is-show {
   right: 0;
   width: 100%;
   height: 100%;
-  background-color: $c-main;
+  background-color: $color-main;
   z-index: 10;
 }
