--- a/src/sass/module/_page-top.scss
+++ b/src/sass/module/_page-top.scss
@@ -8,7 +8,7 @@
   height: rem(48);
   border-radius: 50%;
   background-color: $white;
-  border: 1px solid $c-main;
+  border: 1px solid $color-main;
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
   background-image: url(../images/common/icon-pageTop.svg);
   background-repeat: no-repeat;
