--- a/src/sass/module/_price.scss
+++ b/src/sass/module/_price.scss
@@ -2,7 +2,7 @@
 
 .price {
   padding-block: rem(80);
-  background-color: $c-sub;
+  background-color: $color-sub;
   @include mq("md") {
     padding-block: rem(100);
     position: relative;
@@ -66,7 +66,7 @@
 
 .price__item-title {
   position: relative;
-  color: $c-font;
+  color: $color-font;
   font-size: rem(16);
   font-weight: $bold;
   line-height: calc(24 / 16);
@@ -81,7 +81,7 @@
   left: 0;
   width: 100%;
   height: 2px;
-  background-color: $c-main;
+  background-color: $color-main;
 }
 
 .price__sub-item {
@@ -89,7 +89,7 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  color: $c-font;
+  color: $color-font;
   font-size: rem(14);
   font-weight: $regular;
   line-height: calc(24 / 14);
