--- a/src/sass/module/_sitemap.scss
+++ b/src/sass/module/_sitemap.scss
@@ -60,7 +60,7 @@
   mask-size: contain;
   mask-repeat: no-repeat;
   mask-position: center;
-  background-color: $c-font;
+  background-color: $color-font;
 }
 
 .sitemap__sub-item a {
