--- a/src/sass/module/_voice-card.scss
+++ b/src/sass/module/_voice-card.scss
@@ -37,10 +37,10 @@
 .voice-card__category {
   padding: rem(3) rem(11);
   display: inline-block;
-  color: $c-main;
+  color: $color-main;
   font-size: rem(12);
   line-height: calc(22 / 12);
-  border: 1px solid $c-main;
+  border: 1px solid $color-main;
   @include mq("md") {
     margin-top: 0;
     margin-left: auto;
@@ -54,7 +54,7 @@
   font-size: rem(16);
   font-weight: $medium;
   line-height: calc(23 / 16);
-  border-bottom: 1px solid $c-main;
+  border-bottom: 1px solid $color-main;
   @include mq("md") {
     margin-top: rem(8);
     font-size: rem(24);
