--- a/src/sass/module/_top-blog.scss
+++ b/src/sass/module/_top-blog.scss
@@ -16,7 +16,7 @@
     left: 0;
     width: 100%;
     height: rem(500);
-    background-image: url(../images/top/img-blog-bg.jpg);
+    background-image: url(../images/top/blog-bg.webp);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
