--- a/src/sass/module/_single-blog.scss
+++ b/src/sass/module/_single-blog.scss
@@ -73,10 +73,11 @@
     left: 0;
     width: rem(18);
     height: rem(18);
-    background-image: url(../images/common/icon-blog-list.svg);
-    background-size: contain;
-    background-repeat: no-repeat;
-    background-position: center;
+    mask-image: url(../images/common/icon-list.svg);
+    mask-size: contain;
+    mask-repeat: no-repeat;
+    mask-position: center;
+    background-color: $color-main;
   }
 
   li + li {
