--- a/src/sass/module/_sp-nav.scss
+++ b/src/sass/module/_sp-nav.scss
@@ -34,10 +34,11 @@
   left: 0;
   width: rem(18);
   height: rem(18);
-  background-image: url(../images/common/icon-hitode.svg);
-  background-repeat: no-repeat;
-  background-size: contain;
-  background-position: center;
+  mask-image: url(../images/common/icon-list.svg);
+  mask-repeat: no-repeat;
+  mask-size: contain;
+  mask-position: center;
+  background-color: $white;
 }
 
 .sp-nav__sub-item > a {
