--- a/src/sass/module/_about.scss
+++ b/src/sass/module/_about.scss
@@ -97,7 +97,7 @@
   color: $color-main;
   font-family: $second-font-family;
   font-size: rem(40);
-  font-weight: $regular;
+  font-weight: $bold;
   line-height: 1;
   @include mq("md") {
     color: $white;
