--- a/src/sass/module/_mv.scss
+++ b/src/sass/module/_mv.scss
@@ -33,6 +33,7 @@
   line-height: calc(48 / 40);
   letter-spacing: 0.1em;
   text-align: left;
+  text-shadow: 1px 1px 3px #444;
   @include mq("md") {
     flex-direction: row;
     justify-content: center;
@@ -49,6 +50,7 @@
   font-size: vw(375, 20);
   font-weight: $regular;
   line-height: calc(33 / 20);
+  text-shadow: 1px 1px 3px #444;
   @include mq("md") {
     font-size: vw(1440, 20);
     line-height: calc(33 / 20);
